<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>rob599_basic</name>
  <version>0.1.0</version>

  <description>
    This is a collection of example nodes for the class ROB 499/599: Robot Software Frameworks, taught
    in the Robotics Program at Oregon State University.
  </description>
  <maintainer email="bill.smart@oregonstate.edu">Bill Smart</maintainer>

  <license>BSD 3-Clause</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
