<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rob599_more</name>
  <version>0.1.0</version>
  <description>
    More advanced ROS 2 examples for the ROB 499/599 class
    in the Robotics program at Oregon State University.
  </description>

  <maintainer email="bill.smart@oregonstate.edu">Bill Smart</maintainer>
  <license>BSD 3-Clause</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <depend>message_filters</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
